test/syntax/wrong/unused1.kk
fun main() {
  1 2 + 3
}